Fix the height jump

--- a/styles/pages/index.fullscreen.module.css
+++ b/styles/pages/index.fullscreen.module.css
@@ -31,7 +31,7 @@
   align-items: center;  /* vertically center the items */
 }
 .main .input {
-  height: 45px;
+  height: 45px !important;
   overflow-y: auto;
   width: 100%;
   padding: 10px;
